syntax = "proto3";

package sample;

option go_package = "./;sample";

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}

message IncrRequest {
  int32 num = 1;
}

message IncrResponse {
}

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
  rpc Incr(IncrRequest) returns (IncrResponse);
  rpc BidiStream(stream BidiStreamArgs) returns (stream BidiStreamReply);
  rpc ClientStream(stream ClientStreamArgs) returns (ClientStreamReply);
  rpc ServerStream(ServerStreamArgs) returns(stream ServerStreamReply);
}

message BidiStreamArgs {
  string data = 1;
}

message BidiStreamReply {
  string data = 1;
}

message ClientStreamArgs {
  string value = 1;
}

message ClientStreamReply {
  string value = 1;
}

message ServerStreamArgs {
  string value = 1;
}

message ServerStreamReply {
  string value = 1;
}